--- a/Avaliação_N2/Projeto_PW/package.json
+++ b/Avaliação_N2/Projeto_PW/package.json
@@ -1,1 +1,11 @@
-
+"name": "Projeto_PW",
+"version": "1.0.0",
+"description": "",
+"main": "index.js",
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+"keywords": [],
+"author": "",
+"license": "ISC"
+}
