--- a/Avaliação_N2/Projeto_PW/package.json
+++ b/Avaliação_N2/Projeto_PW/package.json
@@ -8,5 +8,11 @@
 },
 "keywords": [],
 "author": "",
-"license": "ISC"
+"license": "ISC",
+"dependecies": {
+  "express": "^4.18.1"
+},
+"devDependencies": {
+  "nodemon": "^2.0.16"
+}
 }
